...
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Go back button -->
        <ImageButton
            android:id="@+id/toolbarBackButton"
            style="@style/IconButton"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/description_back_button"/>

        <!-- Title -->
        <TextView
            android:id="@+id/toolbarTitle"
            style="@style/LargeText.LightGrey"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
...
