...

    <!-- Toolbar -->
    <include layout="@layout/toolbar"/>

    <!-- Submit friend -->
    <Button
        android:id="@+id/submitFriendButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonDarkGreen"
        android:text="@string/submit_friend_button"
        android:onClick="submitFriendButton" />


    <EditText
        android:id="@+id/editTextFriend"
        android:autofillHints="username"
        style="@style/ButtonGrey"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/insert_friend_button"
...
